@@ -30,23 +30,23 @@ check(mtn("rename", "from", "to"), 0, false, false)
 check(mtn("rename", "from_patched", "to_patched"), 0, false, false)
 
 check(mtn("status"), 0, true, false)
-check(qgrep('^dropped dropped', "stdout"))
-check(qgrep('^renamed from', "stdout"))
-check(qgrep('^     to to', "stdout"))
-check(qgrep('^renamed from_patched', "stdout"))
-check(qgrep('^     to to_patched', "stdout"))
-check(qgrep('^added   added', "stdout"))
-check(qgrep('^patched patched', "stdout"))
-check(qgrep('^patched to_patched', "stdout"))
+check(qgrep('^  dropped dropped', "stdout"))
+check(qgrep('^  renamed from', "stdout"))
+check(qgrep('^       to to', "stdout"))
+check(qgrep('^  renamed from_patched', "stdout"))
+check(qgrep('^       to to_patched', "stdout"))
+check(qgrep('^  added   added', "stdout"))
+check(qgrep('^  patched patched', "stdout"))
+check(qgrep('^  patched to_patched', "stdout"))
 
 -- restricted
 
 check(mtn("status", "from", "from_patched"), 0, true, false)
-check(not qgrep('^delete "dropped"', "stdout"))
-check(qgrep('^renamed from', "stdout"))
-check(qgrep('^     to to', "stdout"))
-check(qgrep('^renamed from_patched', "stdout"))
-check(qgrep('^     to to_patched', "stdout"))
-check(not qgrep('^add_file added', "stdout"))
-check(not qgrep('^patched patched', "stdout"))
-check(qgrep('^patched to_patched', "stdout"))
+check(not qgrep('^  delete "dropped"', "stdout"))
+check(qgrep('^  renamed from', "stdout"))
+check(qgrep('^       to to', "stdout"))
+check(qgrep('^  renamed from_patched', "stdout"))
+check(qgrep('^       to to_patched', "stdout"))
+check(not qgrep('^  add_file added', "stdout"))
+check(not qgrep('^  patched patched', "stdout"))
+check(qgrep('^  patched to_patched', "stdout"))
